--- a/post.hbs
+++ b/post.hbs
@@ -12,8 +12,8 @@
     <article class="{{post_class}} clearfix">
 
         {{#if image}}
-        <figure class="post-photo">
-            <img src="{{image}}" alt="{{{title}}}" />
+        <figure class="post-photo" style="background-image: url({{image}})">
+            <!-- <img src="{{image}}" alt="{{{title}}}" /> -->
         </figure>
         {{/if}}
 
