--- a/default.hbs
+++ b/default.hbs
@@ -36,6 +36,7 @@
     {{! The main JavaScript file for Glimpse }}
     <script type="text/javascript" src="{{asset "libs/unveil/unveil.min.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
+    <script type="text/javascript" src="{{asset "js/jquery.min.js"}}"></script>
 
 </body>
 </html>
