--- a/partials/loop-featured.hbs
+++ b/partials/loop-featured.hbs
@@ -3,6 +3,7 @@
 {{#foreach posts}}
 {{#if featured}}{{#if image}}
 <figure style="background-image: url({{image}})">
+    <img/> 
     <!-- <img src="{{image}}" alt="{{{title}}}" /> -->
     <figcaption class="main-header-content inner">{{title}}</figcaption>
 </figure>
